Added Shipping and Payment screen

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -4,9 +4,9 @@
 @import 'config/general';
 
 @import 'modules/container';
-@import 'modules/landing';
 @import 'modules/navbar';
 @import 'modules/products';
 @import 'modules/footer';
 @import 'modules/productDetail';
 @import 'modules/cart';
+@import 'modules/form';
