--- a/client/src/scss/modules/_navbar.scss
+++ b/client/src/scss/modules/_navbar.scss
@@ -3,20 +3,56 @@
 .nav {
   display: flex;
   justify-content: space-between;
-  padding: 2rem;
+  padding: 2rem 3rem;
   width: 100%;
   position: fixed;
 
-  .nav__logo {
+  &__logo {
     font-family: 'Cinzel', serif;
     font-size: 2.8rem;
   }
 
-  .nav__items {
+  &__items {
     display: flex;
     align-items: center;
     li {
       padding: 0 1.5rem;
+    }
+
+    .dropdown {
+      margin-left: 20px;
+      i {
+        margin-left: 4px;
+      }
+
+      .dropdown__profile {
+        &:hover {
+          color: #666;
+
+          cursor: pointer;
+        }
+      }
+
+      .dropdown__content {
+        display: none;
+        position: absolute;
+        padding: 5px;
+        min-width: 80px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        text-align: center;
+
+        &__profile {
+          margin-bottom: 4px;
+        }
+        &__logout:hover {
+          color: #666;
+          cursor: pointer;
+        }
+      }
+    }
+    .dropdown:hover .dropdown__content {
+      display: block;
     }
   }
 
@@ -31,6 +67,10 @@
       li {
         font-size: 0.8rem;
         padding: 0 0.5rem;
+      }
+
+      .dropdown .dropdown__content {
+        min-width: 70px;
       }
     }
   }
