Added Place order screen

--- a/client/src/scss/config/_variables.scss
+++ b/client/src/scss/config/_variables.scss
@@ -3,6 +3,7 @@ $dark-color: #333;
 $secondary-color: #555;
 $primary-color: #b2b2b2;
 $light-color: #f4f4f4;
+$emphasis-color: #f3885f;
 
 $success-color: #3ba961;
 $danger-color: #d23430;
