--- a/client/src/scss/modules/_cart.scss
+++ b/client/src/scss/modules/_cart.scss
@@ -1,7 +1,6 @@
 .cart__container {
-  padding: 16px;
+  padding: 1rem;
   display: flex;
-  // justify-content: space-between;
   align-items: center;
   margin-top: 10px;
   border-bottom: 1px solid $primary-color;
