Added payment checkout

--- a/client/src/scss/config/_general.scss
+++ b/client/src/scss/config/_general.scss
@@ -56,6 +56,11 @@ ul {
   font-size: 1rem;
 }
 
+.success {
+  color: $success-color;
+  font-size: 1rem;
+}
+
 .select {
   width: 40px;
   padding: 5px;
