--- a/client/src/scss/modules/_navbar.scss
+++ b/client/src/scss/modules/_navbar.scss
@@ -15,20 +15,23 @@
   &__items {
     display: flex;
     align-items: center;
+
     li {
       padding: 0 1.5rem;
     }
 
     .dropdown {
-      margin-left: 20px;
+      position: relative;
+      display: inline-block;
+
       i {
         margin-left: 4px;
       }
 
       .dropdown__profile {
+        text-align: center;
         &:hover {
           color: #666;
-
           cursor: pointer;
         }
       }
@@ -51,26 +54,29 @@
         }
       }
     }
+
     .dropdown:hover .dropdown__content {
-      display: block;
+      display: flex;
+      flex-direction: column;
     }
   }
 
   @include atMobile {
     background-color: #fff;
-    padding: 0.75rem 1rem;
+    padding: 0.75rem 2rem;
 
     .nav__logo {
       font-size: 1.5rem;
     }
+
     .nav__items {
       li {
         font-size: 0.8rem;
-        padding: 0 0.5rem;
-      }
+        padding: 0 0.4rem;
 
-      .dropdown .dropdown__content {
-        min-width: 70px;
+        .dropdown:hover .dropdown__content {
+          max-width: 20px;
+        }
       }
     }
   }
