--- a/client/src/scss/modules/_navbar.scss
+++ b/client/src/scss/modules/_navbar.scss
@@ -45,7 +45,7 @@
         z-index: 1;
         text-align: center;
 
-        &__profile {
+        &__item {
           margin-bottom: 4px;
         }
         &__logout:hover {
