Added admin product edit screen

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -11,4 +11,4 @@
 @import 'modules/cart';
 @import 'modules/form';
 @import 'modules/placeOrder';
-@import 'modules/userList';
+@import 'modules/adminList';
