--- a/client/src/scss/modules/_adminList.scss
+++ b/client/src/scss/modules/_adminList.scss
@@ -1,8 +1,8 @@
-.user__list__title {
+.admin__list__title {
   margin: 1rem 0;
 }
 
-.user__list {
+.admin__list {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
