--- a/client/src/scss/config/_variables.scss
+++ b/client/src/scss/config/_variables.scss
@@ -1,7 +1,8 @@
 // Colors
-$dark-color: #333;
+$dark-color: #000;
 $secondary-color: #555;
 $primary-color: #b2b2b2;
+$white-color: #fff;
 $light-color: #f4f4f4;
 $emphasis-color: #f3885f;
 
