--- a/client/src/scss/modules/_products.scss
+++ b/client/src/scss/modules/_products.scss
@@ -1,5 +1,19 @@
 // Products Landing page
 
+.page__title {
+  font-size: 1rem;
+  margin: 2rem 0;
+
+  @include atMobile {
+    font-size: 0.8rem;
+    margin: 0 0 1rem 0;
+  }
+
+  @include atTablets {
+    margin: 1rem 0;
+  }
+}
+
 .rating span {
   margin: 0.1rem;
 }
