--- a/client/src/scss/modules/_productDetail.scss
+++ b/client/src/scss/modules/_productDetail.scss
@@ -74,3 +74,36 @@
     }
   }
 }
+
+.productDetail__review {
+  margin-top: 3rem;
+
+  &__container {
+    width: 500px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+
+    & > * {
+      flex-grow: 1;
+      flex-basis: 0;
+    }
+
+    &__item,
+    &__item__content {
+      margin: 1rem 1rem 0 1rem;
+    }
+
+    @include atMobile {
+      flex-direction: column;
+
+      &__item__content {
+        margin-bottom: 1rem;
+      }
+    }
+  }
+}
+
+.productDetail__review__create {
+  margin-top: 3rem;
+}
