--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -5,9 +5,9 @@
 
 @import 'modules/container';
 @import 'modules/navbar';
-@import 'modules/products';
 @import 'modules/footer';
 @import 'modules/productDetail';
+@import 'modules/productLanding';
 @import 'modules/cart';
 @import 'modules/form';
 @import 'modules/placeOrder';
