Added category filter feature

--- a/client/src/scss/modules/_productLanding.scss
+++ b/client/src/scss/modules/_productLanding.scss
@@ -1,6 +1,11 @@
 .productLanding__filter {
   display: flex;
   justify-content: center;
+  margin-bottom: 1rem;
+
+  .active {
+    color: $primary-color;
+  }
 
   button {
     background-color: transparent;
