Added home screen

--- a/client/src/scss/config/_variables.scss
+++ b/client/src/scss/config/_variables.scss
@@ -4,6 +4,7 @@ $white-color: #fff;
 $light-color: #f4f4f4;
 $primary-color: #b2b2b2;
 $secondary-color: #666;
+$hover-color: #555;
 $emphasis-color: #f3885f;
 
 $success-color: #3ba961;
