--- a/client/src/scss/modules/_footer.scss
+++ b/client/src/scss/modules/_footer.scss
@@ -1,4 +1,7 @@
 .footer {
-  margin: 50px 0;
-  text-align: center;
+  background-color: black;
+  color: white;
+  padding: 2rem 2rem;
+  font-size: 0.7rem;
+  text-align: right;
 }
