--- a/client/src/scss/config/_general.scss
+++ b/client/src/scss/config/_general.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&family=Nunito:wght@200;400;600&display=swap');
 
+// General
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,16 +12,15 @@ body {
   font-size: 0.8rem;
   line-height: 1.6;
   background-color: #fff;
-  color: $dark-color;
 }
 
 a {
-  color: $dark-color;
   text-decoration: none;
-}
+  color: $dark-color;
 
-a:hover {
-  color: $secondary-color;
+  &:hover {
+    color: $secondary-color;
+  }
 }
 
 ul {
@@ -31,7 +31,7 @@ ul {
   display: inline-block;
   font-size: 0.8rem;
   padding: 12px;
-  color: $light-color;
+  color: $white-color;
   background-color: $dark-color;
   text-align: center;
   vertical-align: middle;
