--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'modules/container';
 @import 'modules/navbar';
 @import 'modules/footer';
+@import 'modules/home';
 @import 'modules/productDetail';
 @import 'modules/productLanding';
 @import 'modules/cart';
