--- a/client/src/scss/modules/_navbar.scss
+++ b/client/src/scss/modules/_navbar.scss
@@ -6,6 +6,11 @@
   padding: 2rem 3rem;
   width: 100%;
   position: fixed;
+  z-index: 2;
+
+  a {
+    color: $dark-color;
+  }
 
   &__logo {
     font-family: 'Cinzel', serif;
@@ -72,7 +77,7 @@
       .dropdown__profile {
         text-align: center;
         &:hover {
-          color: #666;
+          color: $secondary-color;
           cursor: pointer;
         }
       }
@@ -92,7 +97,7 @@
         }
 
         &__logout:hover {
-          color: #666;
+          color: $secondary-color;
           cursor: pointer;
         }
       }
@@ -105,7 +110,6 @@
   }
 
   @include atMobile {
-    background-color: $white-color;
     padding: 0.75rem 2rem;
 
     .nav__logo {
@@ -133,5 +137,10 @@
         padding: 0 0.8rem;
       }
     }
+  }
+
+  &--dark,
+  &--dark a {
+    color: white;
   }
 }
