--- a/client/src/scss/modules/_pagination.scss
+++ b/client/src/scss/modules/_pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
   display: flex;
   justify-content: center;
-  margin-top: 2rem;
+  margin: 2rem 0;
   color: $primary-color;
 
   &__item {
