--- a/client/src/scss/modules/_form.scss
+++ b/client/src/scss/modules/_form.scss
@@ -48,6 +48,10 @@
     margin-top: 1rem;
   }
 
+  &__table__container {
+    margin-bottom: 4rem;
+  }
+
   &__table {
     margin-top: 1.8rem;
     display: flex;
