--- a/client/src/scss/modules/_home.scss
+++ b/client/src/scss/modules/_home.scss
@@ -59,6 +59,10 @@
     &--b {
       background-image: url('../../images/showcase2.jpg');
     }
+
+    &--c {
+      background-color: $dark-color;
+    }
   }
 
   &__content {
@@ -82,14 +86,39 @@
       margin-top: 1rem;
       border: 2px solid $white-color;
     }
+  }
 
-    &--a {
-      color: $white-color;
+  input {
+    background-color: transparent;
+    color: $white-color;
+    outline: 0;
+    border-width: 0 0 2px;
+    margin-top: 1rem;
+    width: 300px;
+    height: 30px;
+  }
 
-      a {
-        color: $white-color;
-        border: 2px solid $white-color;
-      }
+  &__icon {
+    margin-top: 1rem;
+
+    a {
+      cursor: pointer;
+      outline: none;
+      border: none;
     }
+
+    a:hover {
+      color: $secondary-color;
+    }
+
+    i {
+      font-size: 1.6rem;
+      margin: 2rem 1rem;
+    }
+  }
+
+  .newsletter--btn {
+    margin-top: 1rem;
+    width: 200px;
   }
 }
