--- a/client/src/scss/modules/_footer.scss
+++ b/client/src/scss/modules/_footer.scss
@@ -1,11 +1,12 @@
 .footer {
+  position: fixed;
+  left: 0;
   bottom: 0;
-  position: absolute;
+  padding: 2rem 2rem;
   width: 100%;
+  height: 115px;
   background-color: black;
   color: white;
-  padding: 2rem 2rem;
   font-size: 0.7rem;
   text-align: right;
-  height: 115px;
 }
